small clean in experiment.py add get_builtin_adapters()
refactor models package

start redoing intro

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -12,23 +12,23 @@
     "\n",
     "from enbios.base.experiment import Experiment\n",
     "from enbios.bw2.util import report\n",
-    "from enbios.models.experiment_models import ExperimentData"
+    "from enbios.models.experiment_base_models import ExperimentData, AdapterModel"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-14T17:08:09.526171020Z",
-     "start_time": "2023-11-14T17:08:07.076013897Z"
+     "end_time": "2023-12-21T15:04:48.828845986Z",
+     "start_time": "2023-12-21T15:04:48.821997831Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-14T17:08:09.549091520Z",
-     "start_time": "2023-11-14T17:08:09.528879961Z"
+     "end_time": "2023-12-21T15:04:49.236543546Z",
+     "start_time": "2023-12-21T15:04:49.202467388Z"
     }
    },
    "outputs": [
@@ -37,9 +37,13 @@
      "output_type": "stream",
      "text": [
       "Project: default\n",
-      "[]\n",
+      "['db']\n",
       "Project: ecoinvent_391\n",
-      "['biosphere3', 'ecoinvent_391_cutoff']\n"
+      "['biosphere3', 'ecoinvent_391_cutoff']\n",
+      "Project: supply chain graph\n",
+      "['bike']\n",
+      "Project: nonlinear-method-test\n",
+      "['db']\n"
      ]
     }
    ],
@@ -50,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-14T17:08:09.609933102Z",
-     "start_time": "2023-11-14T17:08:09.551056069Z"
+     "end_time": "2023-12-21T15:04:50.277251529Z",
+     "start_time": "2023-12-21T15:04:50.261095905Z"
     }
    },
    "outputs": [],
@@ -66,6 +70,280 @@
     "bw2data.projects.set_current(PROJECT_NAME)\n",
     "db = bw2data.Database(DATABASE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"simple-assignment-adapter\": {\n",
+      "    \"activity_indicator\": \"assign\",\n",
+      "    \"configs\": {\n",
+      "      \"activity\": {\n",
+      "        \"$defs\": {\n",
+      "          \"ActivityOutput\": {\n",
+      "            \"properties\": {\n",
+      "              \"unit\": {\n",
+      "                \"title\": \"Unit\",\n",
+      "                \"type\": \"string\"\n",
+      "              },\n",
+      "              \"magnitude\": {\n",
+      "                \"default\": 1.0,\n",
+      "                \"title\": \"Magnitude\",\n",
+      "                \"type\": \"number\"\n",
+      "              }\n",
+      "            },\n",
+      "            \"required\": [\n",
+      "              \"unit\"\n",
+      "            ],\n",
+      "            \"title\": \"ActivityOutput\",\n",
+      "            \"type\": \"object\"\n",
+      "          },\n",
+      "          \"ResultValue\": {\n",
+      "            \"properties\": {\n",
+      "              \"unit\": {\n",
+      "                \"title\": \"Unit\",\n",
+      "                \"type\": \"string\"\n",
+      "              },\n",
+      "              \"amount\": {\n",
+      "                \"anyOf\": [\n",
+      "                  {\n",
+      "                    \"type\": \"number\"\n",
+      "                  },\n",
+      "                  {\n",
+      "                    \"type\": \"null\"\n",
+      "                  }\n",
+      "                ],\n",
+      "                \"default\": 0,\n",
+      "                \"title\": \"Amount\"\n",
+      "              },\n",
+      "              \"multi_amount\": {\n",
+      "                \"anyOf\": [\n",
+      "                  {\n",
+      "                    \"items\": {\n",
+      "                      \"type\": \"number\"\n",
+      "                    },\n",
+      "                    \"type\": \"array\"\n",
+      "                  },\n",
+      "                  {\n",
+      "                    \"type\": \"null\"\n",
+      "                  }\n",
+      "                ],\n",
+      "                \"title\": \"Multi Amount\"\n",
+      "              }\n",
+      "            },\n",
+      "            \"required\": [\n",
+      "              \"unit\"\n",
+      "            ],\n",
+      "            \"title\": \"ResultValue\",\n",
+      "            \"type\": \"object\"\n",
+      "          }\n",
+      "        },\n",
+      "        \"properties\": {\n",
+      "          \"activity\": {\n",
+      "            \"title\": \"Activity\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"output_unit\": {\n",
+      "            \"title\": \"Output Unit\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"default_output\": {\n",
+      "            \"$ref\": \"#/$defs/ActivityOutput\"\n",
+      "          },\n",
+      "          \"default_impacts\": {\n",
+      "            \"anyOf\": [\n",
+      "              {\n",
+      "                \"additionalProperties\": {\n",
+      "                  \"$ref\": \"#/$defs/ResultValue\"\n",
+      "                },\n",
+      "                \"type\": \"object\"\n",
+      "              },\n",
+      "              {\n",
+      "                \"type\": \"null\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": null,\n",
+      "            \"title\": \"Default Impacts\"\n",
+      "          },\n",
+      "          \"scenario_outputs\": {\n",
+      "            \"anyOf\": [\n",
+      "              {\n",
+      "                \"additionalProperties\": {\n",
+      "                  \"$ref\": \"#/$defs/ActivityOutput\"\n",
+      "                },\n",
+      "                \"type\": \"object\"\n",
+      "              },\n",
+      "              {\n",
+      "                \"type\": \"null\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": null,\n",
+      "            \"title\": \"Scenario Outputs\"\n",
+      "          },\n",
+      "          \"scenario_impacts\": {\n",
+      "            \"anyOf\": [\n",
+      "              {\n",
+      "                \"additionalProperties\": {\n",
+      "                  \"additionalProperties\": {\n",
+      "                    \"$ref\": \"#/$defs/ResultValue\"\n",
+      "                  },\n",
+      "                  \"type\": \"object\"\n",
+      "                },\n",
+      "                \"type\": \"object\"\n",
+      "              },\n",
+      "              {\n",
+      "                \"type\": \"null\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": null,\n",
+      "            \"title\": \"Scenario Impacts\"\n",
+      "          }\n",
+      "        },\n",
+      "        \"required\": [\n",
+      "          \"activity\",\n",
+      "          \"output_unit\",\n",
+      "          \"default_output\"\n",
+      "        ],\n",
+      "        \"title\": \"SimpleAssignment\",\n",
+      "        \"type\": \"object\"\n",
+      "      }\n",
+      "    }\n",
+      "  },\n",
+      "  \"brightway-adapter\": {\n",
+      "    \"activity_indicator\": \"bw\",\n",
+      "    \"configs\": {\n",
+      "      \"adapter\": {\n",
+      "        \"description\": \"BWAdapterConfig(*, bw_project: str, use_k_bw_distributions: int = 1, store_raw_results: Optional[bool] = False, store_lca_object: Optional[bool] = False)\",\n",
+      "        \"properties\": {\n",
+      "          \"bw_project\": {\n",
+      "            \"title\": \"Bw Project\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"use_k_bw_distributions\": {\n",
+      "            \"default\": 1,\n",
+      "            \"description\": \"Number of samples to use for MonteCarlo\",\n",
+      "            \"title\": \"Use K Bw Distributions\",\n",
+      "            \"type\": \"integer\"\n",
+      "          },\n",
+      "          \"store_raw_results\": {\n",
+      "            \"anyOf\": [\n",
+      "              {\n",
+      "                \"type\": \"boolean\"\n",
+      "              },\n",
+      "              {\n",
+      "                \"type\": \"null\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": false,\n",
+      "            \"title\": \"Store Raw Results\"\n",
+      "          },\n",
+      "          \"store_lca_object\": {\n",
+      "            \"anyOf\": [\n",
+      "              {\n",
+      "                \"type\": \"boolean\"\n",
+      "              },\n",
+      "              {\n",
+      "                \"type\": \"null\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": false,\n",
+      "            \"title\": \"Store Lca Object\"\n",
+      "          }\n",
+      "        },\n",
+      "        \"required\": [\n",
+      "          \"bw_project\"\n",
+      "        ],\n",
+      "        \"title\": \"BWAdapterConfig\",\n",
+      "        \"type\": \"object\"\n",
+      "      },\n",
+      "      \"activity\": {\n",
+      "        \"$defs\": {\n",
+      "          \"ActivityOutput\": {\n",
+      "            \"properties\": {\n",
+      "              \"unit\": {\n",
+      "                \"title\": \"Unit\",\n",
+      "                \"type\": \"string\"\n",
+      "              },\n",
+      "              \"magnitude\": {\n",
+      "                \"default\": 1.0,\n",
+      "                \"title\": \"Magnitude\",\n",
+      "                \"type\": \"number\"\n",
+      "              }\n",
+      "            },\n",
+      "            \"required\": [\n",
+      "              \"unit\"\n",
+      "            ],\n",
+      "            \"title\": \"ActivityOutput\",\n",
+      "            \"type\": \"object\"\n",
+      "          }\n",
+      "        },\n",
+      "        \"properties\": {\n",
+      "          \"name\": {\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Search:Name of the brightway activity\",\n",
+      "            \"title\": \"Name\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"database\": {\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Search:Name of the database to search first\",\n",
+      "            \"title\": \"Database\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"code\": {\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Search:Brightway activity code\",\n",
+      "            \"title\": \"Code\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"location\": {\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Search:Location filter\",\n",
+      "            \"title\": \"Location\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"unit\": {\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Search: unit filter of results\",\n",
+      "            \"title\": \"Unit\",\n",
+      "            \"type\": \"string\"\n",
+      "          },\n",
+      "          \"default_output\": {\n",
+      "            \"allOf\": [\n",
+      "              {\n",
+      "                \"$ref\": \"#/$defs/ActivityOutput\"\n",
+      "              }\n",
+      "            ],\n",
+      "            \"default\": null,\n",
+      "            \"description\": \"Default output of the activity for all scenarios\"\n",
+      "          }\n",
+      "        },\n",
+      "        \"title\": \"BrightwayActivityConfig\",\n",
+      "        \"type\": \"object\"\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "print(json.dumps(Experiment.get_builtin_adapters(), indent=2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-21T15:04:50.959937239Z",
+     "start_time": "2023-12-21T15:04:50.955879238Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -80,8 +358,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-14T17:08:09.787715277Z",
-     "start_time": "2023-11-14T17:08:09.561085373Z"
+     "end_time": "2023-12-21T13:23:07.086603243Z",
+     "start_time": "2023-12-21T13:23:06.872983464Z"
     }
    },
    "outputs": [
@@ -110,23 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-14T18:54:59.816463692Z",
-     "start_time": "2023-11-14T18:54:59.771435582Z"
+     "end_time": "2023-12-21T13:27:34.183557544Z",
+     "start_time": "2023-12-21T13:27:34.142234997Z"
     }
    },
    "outputs": [],
    "source": [
-    "# for the experiment we need to create a list of activities (or a dict, where the keys represent the aliases)\n",
-    "# We need to add the codes, otherwise the brightway search will not be not uniquely identify the activities\n",
-    "# adding name is just for convenience\n",
+    "# for the experiment we need to specify some (even if very simple) hierarchy made out of activity nodes at the bottom. \n",
+    "# Activity notes\n",
+    "# we are using the brightway adapter, that is integrated into enbios.\n",
+    "\n",
     "experiment_activities = []\n",
     "\n",
-    "for activity in wind_turbines_spain[:2]:\n",
+    "for activity in wind_turbines_spain:\n",
     "    experiment_activities.append(\n",
-    "        {\"id\": {\"name\": activity[\"name\"], \"code\": activity[\"code\"]}}\n",
+    "        {\"name\": activity[\"name\"], \"adapter\": \"bw\", \"config\": {\n",
+    "            \"code\": activity[\"code\"]\n",
+    "        }}\n",
     "    )"
    ]
   },
@@ -151,33 +432,32 @@
    ],
    "source": [
     "# we can modify the output of the activities, by default it is the reference product (1 of the activity unit)\n",
-    "experiment_activities[0][\"output\"] = [\"kilowatt_hour\", 3]\n",
+    "experiment_activities[0][\"config\"][\"default_output\"] = [\"kilowatt_hour\", 3]\n",
     "experiment_activities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-14T17:08:10.985240465Z",
-     "start_time": "2023-11-14T17:08:10.979297339Z"
+     "end_time": "2023-12-21T15:07:33.190589169Z",
+     "start_time": "2023-12-21T15:07:33.146918137Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'id': ('ReCiPe 2016 v1.03, midpoint (H)',\n   'ozone depletion',\n   'ozone depletion potential (ODPinfinite)')},\n {'id': ('ReCiPe 2016 v1.03, midpoint (H)',\n   'land use',\n   'agricultural land occupation (LOP)')}]"
+      "text/plain": "[('Ecological Scarcity 2021', 'emissions to water', 'water pollutants'),\n ('EDIP 2003', 'non-renewable resources', 'copper')]"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select 2 random methods and convert them into the form for enbios2\n",
-    "methods = [bw2data.methods.random() for _ in range(2)]\n",
-    "experiment_methods = [{\"id\": method} for method in methods]\n",
+    "experiment_methods = [bw2data.methods.random() for _ in range(2)]\n",
     "\n",
     "experiment_methods"
    ]
@@ -189,20 +469,16 @@
    "source": [
     "# alternatively, we could just specify two methods\n",
     "experiment_methods = [\n",
-    "    {\n",
-    "        \"id\": (\n",
-    "            \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
-    "            \"climate change\",\n",
-    "            \"global warming potential (GWP1000)\",\n",
-    "        )\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": (\n",
-    "            \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
-    "            \"ecotoxicity: freshwater\",\n",
-    "            \"freshwater ecotoxicity potential (FETP)\",\n",
-    "        )\n",
-    "    },\n",
+    "    (\n",
+    "        \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "        \"climate change\",\n",
+    "        \"global warming potential (GWP1000)\",\n",
+    "    ),\n",
+    "    (\n",
+    "        \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "        \"ecotoxicity: freshwater\",\n",
+    "        \"freshwater ecotoxicity potential (FETP)\",\n",
+    "    )\n",
     "]"
    ],
    "metadata": {
@@ -217,9 +493,11 @@
    "source": [
     "# let's store the raw data, because we want to modify it later\n",
     "simple_raw_data = {\n",
-    "    \"bw_project\": PROJECT_NAME,\n",
-    "    \"activities\": experiment_activities,\n",
-    "    \"methods\": experiment_methods,\n",
+    "    \"adapters\": [{\"config\": {\n",
+    "        \"bw_project\": PROJECT_NAME\n",
+    "    },\n",
+    "        \"methods\": experiment_methods\n",
+    "    }]\n",
     "}\n",
     "\n",
     "# make a first validation of the experiment data\n",
@@ -244,6 +522,17 @@
    "source": [
     "print(simple_experiment.info())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ExperimentData(adapters=[AdapterModel(adapter_name=\"bw\", config={\"bw_project\": PROJECT_NAME})])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
