--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.454683474Z",
-     "start_time": "2024-01-08T15:32:09.864547091Z"
+     "end_time": "2024-01-09T10:02:29.854667850Z",
+     "start_time": "2024-01-09T10:02:28.191095988Z"
     }
    }
   },
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.492485408Z",
-     "start_time": "2024-01-08T15:32:11.456824667Z"
+     "end_time": "2024-01-09T10:02:30.241481120Z",
+     "start_time": "2024-01-09T10:02:30.195571147Z"
     }
    },
    "outputs": [
@@ -57,8 +57,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.508646660Z",
-     "start_time": "2024-01-08T15:32:11.493144177Z"
+     "end_time": "2024-01-09T10:02:30.751685641Z",
+     "start_time": "2024-01-09T10:02:30.730514773Z"
     }
    },
    "outputs": [],
@@ -98,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.511159570Z",
-     "start_time": "2024-01-08T15:32:11.507349506Z"
+     "end_time": "2024-01-09T10:02:31.219254366Z",
+     "start_time": "2024-01-09T10:02:31.181134029Z"
     }
    }
   },
@@ -116,8 +116,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.755297276Z",
-     "start_time": "2024-01-08T15:32:11.511790216Z"
+     "end_time": "2024-01-09T10:02:32.746908006Z",
+     "start_time": "2024-01-09T10:02:32.523113096Z"
     }
    },
    "outputs": [
@@ -149,8 +149,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.756366749Z",
-     "start_time": "2024-01-08T15:32:11.752572796Z"
+     "end_time": "2024-01-09T10:02:33.036021970Z",
+     "start_time": "2024-01-09T10:02:33.031053676Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.757421613Z",
-     "start_time": "2024-01-08T15:32:11.752674526Z"
+     "end_time": "2024-01-09T10:02:33.587978594Z",
+     "start_time": "2024-01-09T10:02:33.578721952Z"
     }
    },
    "outputs": [
@@ -208,8 +208,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:11.758403310Z",
-     "start_time": "2024-01-08T15:32:11.752739730Z"
+     "end_time": "2024-01-09T10:02:34.653331200Z",
+     "start_time": "2024-01-09T10:02:34.630543261Z"
     }
    }
   },
@@ -218,14 +218,14 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:12.117058760Z",
-     "start_time": "2024-01-08T15:32:12.103969115Z"
+     "end_time": "2024-01-09T10:02:35.517871469Z",
+     "start_time": "2024-01-09T10:02:35.509459889Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'EF v3.1 EN15804_energy resources: non-renewable_abiotic depletion potential (ADP): fossil fuels': ('EF v3.1 EN15804',\n  'energy resources: non-renewable',\n  'abiotic depletion potential (ADP): fossil fuels'),\n 'IPCC 2021 no LT_climate change: fossil no LT_global warming potential (GWP20) no LT': ('IPCC 2021 no LT',\n  'climate change: fossil no LT',\n  'global warming potential (GWP20) no LT')}"
+      "text/plain": "{'EF v3.0 no LT_ecotoxicity: freshwater, metals no LT_comparative toxic unit for ecosystems (CTUe) no LT': ('EF v3.0 no LT',\n  'ecotoxicity: freshwater, metals no LT',\n  'comparative toxic unit for ecosystems (CTUe) no LT'),\n 'Cumulative Exergy Demand (CExD)_material resources: water_exergy content': ('Cumulative Exergy Demand (CExD)',\n  'material resources: water',\n  'exergy content')}"
      },
      "execution_count": 9,
      "metadata": {},
@@ -262,8 +262,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:12.701629571Z",
-     "start_time": "2024-01-08T15:32:12.693823711Z"
+     "end_time": "2024-01-09T10:02:37.454844248Z",
+     "start_time": "2024-01-09T10:02:37.447763629Z"
     }
    }
   },
@@ -272,8 +272,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:13.450734489Z",
-     "start_time": "2024-01-08T15:32:13.443237939Z"
+     "end_time": "2024-01-09T10:02:38.038191115Z",
+     "start_time": "2024-01-09T10:02:38.033610029Z"
     }
    },
    "outputs": [
@@ -310,8 +310,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:14.223013189Z",
-     "start_time": "2024-01-08T15:32:14.151545877Z"
+     "end_time": "2024-01-09T10:02:39.353288659Z",
+     "start_time": "2024-01-09T10:02:39.163365434Z"
     }
    },
    "outputs": [],
@@ -325,8 +325,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:15.696935848Z",
-     "start_time": "2024-01-08T15:32:15.680119738Z"
+     "end_time": "2024-01-09T10:02:40.806891426Z",
+     "start_time": "2024-01-09T10:02:40.781939456Z"
     }
    },
    "outputs": [
@@ -500,11 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:43.578197663Z",
-     "start_time": "2024-01-08T15:32:43.484487963Z"
+     "end_time": "2024-01-09T10:03:00.865506728Z",
+     "start_time": "2024-01-09T10:03:00.796506482Z"
     }
    },
    "outputs": [
@@ -519,7 +519,7 @@
      "data": {
       "text/plain": "['electricity production, solar tower power plant, 20 MW' (kilowatt hour, ES, None),\n 'electricity production, solar thermal parabolic trough, 50 MW' (kilowatt hour, ES, None)]"
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "experiment_activities_solar = []\n",
@@ -563,18 +563,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:43.579479670Z",
-     "start_time": "2024-01-08T15:32:43.564551374Z"
+     "end_time": "2024-01-09T10:03:03.752277698Z",
+     "start_time": "2024-01-09T10:03:03.741973092Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:43.626816281Z",
-     "start_time": "2024-01-08T15:32:43.564685036Z"
+     "end_time": "2024-01-09T10:03:05.276886619Z",
+     "start_time": "2024-01-09T10:03:05.192533248Z"
     }
    },
    "outputs": [],
@@ -778,14 +778,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "We can also now run any new scenario configuration for the given experiment using `run_scenario_config`"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-08 16:33:47,636 - enbios.demos.enbios.base - INFO - Running scenario 'new scenario'\n"
+      "2024-01-08 16:39:18,606 - enbios.demos.enbios.base - INFO - Running scenario 'new scenario'\n"
      ]
     }
    ],
@@ -797,10 +806,76 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:34:28.076670300Z",
-     "start_time": "2024-01-08T15:33:47.638225858Z"
+     "end_time": "2024-01-08T15:39:57.836743287Z",
+     "start_time": "2024-01-08T15:39:18.610260673Z"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "[None]"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "# Experiment.get_builtin_adapters()\n",
+    "[print(json.dump(a.get_config_schemas()[\"adapter\"], Path(\"temp.json\").open(\"w\"), indent=2)) for a in hierarchy_experiment.adapters]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-09T10:22:55.986409619Z",
+     "start_time": "2024-01-09T10:22:55.920264571Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Generating schema_doc.md ==\n",
+      "== Generated schema_doc.md in 0:00:00.025942 ==\n"
+     ]
+    }
+   ],
+   "source": [
+    "from json_schema_for_humans.generate import generate_from_filename, generate_from_schema, generate_schemas_doc\n",
+    "from json_schema_for_humans.generation_configuration import GenerationConfiguration\n",
+    "\n",
+    "config = GenerationConfiguration(copy_css=False, expand_buttons=False,template_name=\"md\")\n",
+    "\n",
+    "generate_from_filename(\"temp.json\", \"schema_doc.md\", config=config)\n",
+    "# generate_from_schema(json.dumps(hierarchy_experiment.adapters[0].get_config_schemas()))\n",
+    "# Your doc is now in a file named \"schema_doc.html\". Next to it, \"schema_doc.min.js\" was copied, but not \"schema_doc.css\"\n",
+    "# Your doc will contain a \"Expand all\" and a \"Collapse all\" button at the top\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-09T10:26:25.196464528Z",
+     "start_time": "2024-01-09T10:26:25.160966305Z"
+    }
+   },
+   "execution_count": 34
   },
   {
    "cell_type": "markdown",
