--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:29.854667850Z",
-     "start_time": "2024-01-09T10:02:28.191095988Z"
+     "end_time": "2024-01-09T11:48:13.855894042Z",
+     "start_time": "2024-01-09T11:48:12.438224131Z"
     }
    }
   },
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:30.241481120Z",
-     "start_time": "2024-01-09T10:02:30.195571147Z"
+     "end_time": "2024-01-09T11:43:49.102487665Z",
+     "start_time": "2024-01-09T11:43:49.069890878Z"
     }
    },
    "outputs": [
@@ -57,51 +57,19 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:30.751685641Z",
-     "start_time": "2024-01-09T10:02:30.730514773Z"
+     "end_time": "2024-01-09T11:43:49.119897476Z",
+     "start_time": "2024-01-09T11:43:49.104296028Z"
     }
    },
    "outputs": [],
    "source": [
-    "# select the brightway project and database (some ecoinvent database)\n",
+    "# select the brightway project and database (e.g. some ecoinvent database)\n",
     "PROJECT_NAME = \"ecoinvent_391\"\n",
     "DATABASE = \"ecoinvent_391_cutoff\"\n",
     "\n",
     "bw2data.projects.set_current(PROJECT_NAME)\n",
     "db = bw2data.Database(DATABASE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"simple-assignment-adapter\": {\n",
-      "    \"activity_indicator\": \"assign\"\n",
-      "  },\n",
-      "  \"brightway-adapter\": {\n",
-      "    \"activity_indicator\": \"bw\"\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "print(json.dumps(Experiment.get_builtin_adapters(False), indent=2))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:31.219254366Z",
-     "start_time": "2024-01-09T10:02:31.181134029Z"
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -116,8 +84,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:32.746908006Z",
-     "start_time": "2024-01-09T10:02:32.523113096Z"
+     "end_time": "2024-01-09T11:43:49.308305677Z",
+     "start_time": "2024-01-09T11:43:49.122450321Z"
     }
    },
    "outputs": [
@@ -149,8 +117,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:33.036021970Z",
-     "start_time": "2024-01-09T10:02:33.031053676Z"
+     "end_time": "2024-01-09T11:43:49.354931175Z",
+     "start_time": "2024-01-09T11:43:49.310311953Z"
     }
    },
    "outputs": [],
@@ -174,8 +142,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:33.587978594Z",
-     "start_time": "2024-01-09T10:02:33.578721952Z"
+     "end_time": "2024-01-09T11:43:49.356406077Z",
+     "start_time": "2024-01-09T11:43:49.354322782Z"
     }
    },
    "outputs": [
@@ -208,8 +176,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:34.653331200Z",
-     "start_time": "2024-01-09T10:02:34.630543261Z"
+     "end_time": "2024-01-09T11:43:50.030339465Z",
+     "start_time": "2024-01-09T11:43:50.024857141Z"
     }
    }
   },
@@ -218,14 +186,14 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:35.517871469Z",
-     "start_time": "2024-01-09T10:02:35.509459889Z"
+     "end_time": "2024-01-09T11:43:50.759775236Z",
+     "start_time": "2024-01-09T11:43:50.754547666Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'EF v3.0 no LT_ecotoxicity: freshwater, metals no LT_comparative toxic unit for ecosystems (CTUe) no LT': ('EF v3.0 no LT',\n  'ecotoxicity: freshwater, metals no LT',\n  'comparative toxic unit for ecosystems (CTUe) no LT'),\n 'Cumulative Exergy Demand (CExD)_material resources: water_exergy content': ('Cumulative Exergy Demand (CExD)',\n  'material resources: water',\n  'exergy content')}"
+      "text/plain": "{'EF v3.1 no LT_human toxicity: carcinogenic no LT_comparative toxic unit for human (CTUh) no LT': ('EF v3.1 no LT',\n  'human toxicity: carcinogenic no LT',\n  'comparative toxic unit for human (CTUh) no LT'),\n 'EF v3.1 no LT_photochemical oxidant formation: human health no LT_tropospheric ozone concentration increase no LT': ('EF v3.1 no LT',\n  'photochemical oxidant formation: human health no LT',\n  'tropospheric ozone concentration increase no LT')}"
      },
      "execution_count": 9,
      "metadata": {},
@@ -262,8 +230,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:37.454844248Z",
-     "start_time": "2024-01-09T10:02:37.447763629Z"
+     "end_time": "2024-01-09T11:43:51.582572544Z",
+     "start_time": "2024-01-09T11:43:51.570318735Z"
     }
    }
   },
@@ -272,8 +240,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:38.038191115Z",
-     "start_time": "2024-01-09T10:02:38.033610029Z"
+     "end_time": "2024-01-09T11:43:52.213156765Z",
+     "start_time": "2024-01-09T11:43:52.208566046Z"
     }
    },
    "outputs": [
@@ -310,8 +278,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:39.353288659Z",
-     "start_time": "2024-01-09T10:02:39.163365434Z"
+     "end_time": "2024-01-09T11:43:53.232755245Z",
+     "start_time": "2024-01-09T11:43:53.161714546Z"
     }
    },
    "outputs": [],
@@ -325,8 +293,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:02:40.806891426Z",
-     "start_time": "2024-01-09T10:02:40.781939456Z"
+     "end_time": "2024-01-09T11:43:54.910143421Z",
+     "start_time": "2024-01-09T11:43:54.891737039Z"
     }
    },
    "outputs": [
@@ -363,8 +331,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-08T15:32:43.508054684Z",
-     "start_time": "2024-01-08T15:32:17.797138328Z"
+     "end_time": "2024-01-09T10:59:10.038205630Z",
+     "start_time": "2024-01-09T10:58:52.062868972Z"
     }
    },
    "outputs": [
@@ -372,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-08 16:32:17,791 - enbios.demos.enbios.base - INFO - Running scenario 'default scenario'\n"
+      "2024-01-09 11:58:52,060 - enbios.demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     }
    ],
@@ -503,8 +471,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:03:00.865506728Z",
-     "start_time": "2024-01-09T10:03:00.796506482Z"
+     "end_time": "2024-01-09T11:44:04.187555162Z",
+     "start_time": "2024-01-09T11:44:04.118072022Z"
     }
    },
    "outputs": [
@@ -563,8 +531,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:03:03.752277698Z",
-     "start_time": "2024-01-09T10:03:03.741973092Z"
+     "end_time": "2024-01-09T11:44:04.727946309Z",
+     "start_time": "2024-01-09T11:44:04.723173213Z"
     }
    }
   },
@@ -573,8 +541,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:03:05.276886619Z",
-     "start_time": "2024-01-09T10:03:05.192533248Z"
+     "end_time": "2024-01-09T11:44:06.183000373Z",
+     "start_time": "2024-01-09T11:44:06.083422664Z"
     }
    },
    "outputs": [],
@@ -813,7 +781,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"simple-assignment-adapter\": {\n",
+      "    \"activity_indicator\": \"assign\"\n",
+      "  },\n",
+      "  \"brightway-adapter\": {\n",
+      "    \"activity_indicator\": \"bw\"\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "print(json.dumps(Experiment.get_builtin_adapters(False), indent=2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-09T11:51:43.182585679Z",
+     "start_time": "2024-01-09T11:51:43.140654288Z"
+    }
+   },
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -826,7 +826,7 @@
      "data": {
       "text/plain": "[None]"
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,13 +835,13 @@
     "from pathlib import Path\n",
     "\n",
     "# Experiment.get_builtin_adapters()\n",
-    "[print(json.dump(a.get_config_schemas()[\"adapter\"], Path(\"temp.json\").open(\"w\"), indent=2)) for a in hierarchy_experiment.adapters]"
+    "[print(json.dump(a.get_config_schemas(), Path(\"temp.json\").open(\"w\"), indent=2)) for a in hierarchy_experiment.adapters]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:22:55.986409619Z",
-     "start_time": "2024-01-09T10:22:55.920264571Z"
+     "end_time": "2024-01-09T11:44:31.152500297Z",
+     "start_time": "2024-01-09T11:44:31.122799067Z"
     }
    }
   },
@@ -853,7 +853,7 @@
      "output_type": "stream",
      "text": [
       "== Generating schema_doc.md ==\n",
-      "== Generated schema_doc.md in 0:00:00.025942 ==\n"
+      "== Generated schema_doc.md in 0:00:00.020017 ==\n"
      ]
     }
    ],
@@ -871,11 +871,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-09T10:26:25.196464528Z",
-     "start_time": "2024-01-09T10:26:25.160966305Z"
+     "end_time": "2024-01-09T10:45:15.782527891Z",
+     "start_time": "2024-01-09T10:45:15.583189026Z"
     }
    },
-   "execution_count": 34
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
