Update method call and remove empty code cell in trees.ipynb

--- a/enbios/demos/trees.ipynb
+++ b/enbios/demos/trees.ipynb
@@ -242,7 +242,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "list(new_root.get_leaves())"
+    "list(new_root.iter_leaves())"
    ],
    "metadata": {
     "collapsed": false
@@ -409,16 +409,6 @@
     "collapsed": false
    },
    "id": "5f5b7583ed75ef13"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "d2b314ded1f231d0"
   }
  ],
  "metadata": {
