--- a/enbios/demos/brightway_tools.ipynb
+++ b/enbios/demos/brightway_tools.ipynb
@@ -32,7 +32,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from enbios.ecoinvent import get_ecoinvent_dataset_index\n",
+    "from enbios.ecoinvent.ecoinvent_index import get_ecoinvent_dataset_index \n",
     "\n",
     "get_ecoinvent_dataset_index()"
    ],
