Refactor code for improved readability and PEP8 compliance

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -5,7 +5,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "from copy import deepcopy\n",
     "from pathlib import Path\n",
     "\n",
@@ -88,9 +87,11 @@
     "\n",
     "for activity in wind_turbines_spain:\n",
     "    experiment_activities.append(\n",
-    "        {\"name\": activity[\"name\"], \"adapter\": \"brightway-adapter\", \"config\": {\n",
-    "            \"code\": activity[\"code\"]\n",
-    "        }}\n",
+    "        {\n",
+    "            \"name\": activity[\"name\"],\n",
+    "            \"adapter\": \"brightway-adapter\",\n",
+    "            \"config\": {\"code\": activity[\"code\"]},\n",
+    "        }\n",
     "    )"
    ]
   },
@@ -101,7 +102,10 @@
    "outputs": [],
    "source": [
     "# we can modify the output of the activities, by default it is the reference product (1 of the activity unit)\n",
-    "experiment_activities[0][\"config\"][\"default_output\"] = {\"unit\": \"kilowatt_hour\", \"magnitude\": 3}\n",
+    "experiment_activities[0][\"config\"][\"default_output\"] = {\n",
+    "    \"unit\": \"kilowatt_hour\",\n",
+    "    \"magnitude\": 3,\n",
+    "}\n",
     "experiment_activities"
    ]
   },
@@ -113,7 +117,7 @@
     "hierarchy = {\n",
     "    \"name\": \"root\",\n",
     "    \"aggregator\": \"sum-aggregator\",\n",
-    "    \"children\": experiment_activities\n",
+    "    \"children\": experiment_activities,\n",
     "}"
    ],
    "metadata": {
@@ -149,7 +153,7 @@
     "        \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
     "        \"ecotoxicity: freshwater\",\n",
     "        \"freshwater ecotoxicity potential (FETP)\",\n",
-    "    )\n",
+    "    ),\n",
     "}"
    ],
    "metadata": {
@@ -167,12 +171,11 @@
     "    \"adapters\": [\n",
     "        {\n",
     "            \"adapter_name\": \"brightway-adapter\",\n",
-    "            \"config\": {\n",
-    "                \"bw_project\": PROJECT_NAME\n",
-    "            },\n",
-    "            \"methods\": experiment_methods\n",
-    "        }],\n",
-    "    \"hierarchy\": hierarchy\n",
+    "            \"config\": {\"bw_project\": PROJECT_NAME},\n",
+    "            \"methods\": experiment_methods,\n",
+    "        }\n",
+    "    ],\n",
+    "    \"hierarchy\": hierarchy,\n",
     "}\n",
     "\n",
     "# make a first validation of the experiment data\n",
@@ -284,9 +287,7 @@
     "experiment_activities_solar = []\n",
     "for activity in solar_spain:\n",
     "    experiment_activities_solar.append(\n",
-    "        {\"name\": activity[\"name\"], \"adapter\": \"bw\", \"config\": {\n",
-    "            \"code\": activity[\"code\"]\n",
-    "        }}\n",
+    "        {\"name\": activity[\"name\"], \"adapter\": \"bw\", \"config\": {\"code\": activity[\"code\"]}}\n",
     "    )\n",
     "\n",
     "hierarchy_raw_data = deepcopy(simple_raw_data)\n",
@@ -294,17 +295,10 @@
     "hierarchy_raw_data[\"hierarchy\"] = {\n",
     "    \"name\": \"root\",\n",
     "    \"aggregator\": \"sum\",\n",
-    "    \"children\": [{\n",
-    "        \"name\": \"wind\",\n",
-    "        \"aggregator\": \"sum\",\n",
-    "        \"children\": experiment_activities\n",
-    "    },\n",
-    "        {\n",
-    "            \"name\": \"solar\",\n",
-    "            \"aggregator\": \"sum\",\n",
-    "            \"children\": experiment_activities_solar\n",
-    "        }\n",
-    "    ]\n",
+    "    \"children\": [\n",
+    "        {\"name\": \"wind\", \"aggregator\": \"sum\", \"children\": experiment_activities},\n",
+    "        {\"name\": \"solar\", \"aggregator\": \"sum\", \"children\": experiment_activities_solar},\n",
+    "    ],\n",
     "}"
    ],
    "metadata": {
@@ -372,19 +366,28 @@
     "def create_normal_scenario():\n",
     "    return {\n",
     "        \"name\": \"normal scenario\",\n",
-    "        \"activities\": {act: (\"kilowatt_hour\", 1) for act in hierarchy_experiment.activities_names}\n",
+    "        \"activities\": {\n",
+    "            act: (\"kilowatt_hour\", 1) for act in hierarchy_experiment.activities_names\n",
+    "        },\n",
     "    }\n",
     "\n",
     "\n",
     "def create_random_scenario(scneario_name: Optional[str] = None):\n",
     "    return {\n",
     "        \"name\": scneario_name,\n",
-    "        \"activities\": {act: (\"kilowatt_hour\", randint(1, 10)) for act in hierarchy_experiment.activities_names}\n",
+    "        \"activities\": {\n",
+    "            act: (\"kilowatt_hour\", randint(1, 10))\n",
+    "            for act in hierarchy_experiment.activities_names\n",
+    "        },\n",
     "    }\n",
     "\n",
     "\n",
     "scenarios_raw_data = deepcopy(hierarchy_raw_data)\n",
-    "scenarios_raw_data[\"scenarios\"] = [create_normal_scenario(), create_random_scenario(), create_random_scenario()]\n",
+    "scenarios_raw_data[\"scenarios\"] = [\n",
+    "    create_normal_scenario(),\n",
+    "    create_random_scenario(),\n",
+    "    create_random_scenario(),\n",
+    "]\n",
     "\n",
     "scenarios_raw_data[\"scenarios\"]"
    ],
@@ -434,7 +437,7 @@
     "    \"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"]\n",
     ")\n",
     "pd.read_csv(\"s1.csv\").fillna(\"\")\n",
-    "Path(\"s1.csv\").unlink() # delete the file again"
+    "Path(\"s1.csv\").unlink()  # delete the file again"
    ],
    "metadata": {
     "collapsed": false
@@ -490,9 +493,7 @@
    "source": [
     "all_results = {}\n",
     "for activity in scenarios_experiment.activities_names:\n",
-    "    all_results[activity] = {\n",
-    "        method: [] for method in scenarios_experiment.method_names\n",
-    "    }\n",
+    "    all_results[activity] = {method: [] for method in scenarios_experiment.method_names}\n",
     "    for scenario in scenarios_experiment.scenarios:\n",
     "        activity_result = scenario.result_tree.find_subnode_by_name(activity)\n",
     "        for method, score in activity_result.data.results.items():\n",
