--- a/enbios/demos/multiple_config_files.ipynb
+++ b/enbios/demos/multiple_config_files.ipynb
@@ -32,27 +32,25 @@
    "outputs": [],
    "source": [
     "base_experiment_data = {\n",
-    "  \"adapters\": [\n",
-    "    {\n",
-    "      \"adapter_name\": \"brightway-adapter\",\n",
-    "      \"config\": {\n",
-    "        \"bw_project\": \"ecoinvent_391\"\n",
-    "      },\n",
-    "      \"methods\": {\n",
-    "        \"GWP1000\": [\n",
-    "          \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
-    "          \"climate change\",\n",
-    "          \"global warming potential (GWP1000)\"\n",
-    "        ],\n",
-    "        \"FETP\": [\n",
-    "          \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
-    "          \"ecotoxicity: freshwater\",\n",
-    "          \"freshwater ecotoxicity potential (FETP)\"\n",
-    "        ]\n",
-    "      }\n",
-    "    }\n",
-    "  ]\n",
-    "}\n"
+    "    \"adapters\": [\n",
+    "        {\n",
+    "            \"adapter_name\": \"brightway-adapter\",\n",
+    "            \"config\": {\"bw_project\": \"ecoinvent_391\"},\n",
+    "            \"methods\": {\n",
+    "                \"GWP1000\": [\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "                    \"climate change\",\n",
+    "                    \"global warming potential (GWP1000)\",\n",
+    "                ],\n",
+    "                \"FETP\": [\n",
+    "                    \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "                    \"ecotoxicity: freshwater\",\n",
+    "                    \"freshwater ecotoxicity potential (FETP)\",\n",
+    "                ],\n",
+    "            },\n",
+    "        }\n",
+    "    ]\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false
@@ -83,7 +81,7 @@
    "source": [
     "experiment_data = base_experiment_data | {\n",
     "    \"hierarchy\": (BASE_PATH / \"hierarchy.json\").as_posix(),\n",
-    "    \"scenarios\": (BASE_PATH / \"scenarios.json\").as_posix()\n",
+    "    \"scenarios\": (BASE_PATH / \"scenarios.json\").as_posix(),\n",
     "}\n",
     "experiment = Experiment(experiment_data)\n",
     "experiment"
