--- a/enbios/demos/multiple_hierarchies.ipynb
+++ b/enbios/demos/multiple_hierarchies.ipynb
@@ -13,7 +13,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "import pickle\n",
     "\n",
     "from enbios.base.experiment import Experiment"
@@ -69,13 +68,15 @@
    "outputs": [],
    "source": [
     "alt_hierarchy = {\n",
-    "            \"name\":\"root\",\n",
-    "            \"aggregator\": \"sum\",\n",
-    "            \"children\": ['electricity production, wind, >3MW turbine, onshore',\n",
-    "                         'electricity production, wind, 1-3MW turbine, onshore',\n",
-    "                         'electricity production, solar tower power plant, 20 MW',\n",
-    "                         'electricity production, solar thermal parabolic trough, 50 MW']\n",
-    "    }"
+    "    \"name\": \"root\",\n",
+    "    \"aggregator\": \"sum\",\n",
+    "    \"children\": [\n",
+    "        \"electricity production, wind, >3MW turbine, onshore\",\n",
+    "        \"electricity production, wind, 1-3MW turbine, onshore\",\n",
+    "        \"electricity production, solar tower power plant, 20 MW\",\n",
+    "        \"electricity production, solar thermal parabolic trough, 50 MW\",\n",
+    "    ],\n",
+    "}"
    ],
    "metadata": {
     "collapsed": false,
@@ -155,10 +156,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "exp.scenarios[0].results_to_csv(\n",
-    "    \"s1.csv\", \n",
-    "    level_names=[\"root\", \"tech\",\"activity\"]\n",
-    ")\n",
+    "exp.scenarios[0].results_to_csv(\"s1.csv\", level_names=[\"root\", \"tech\", \"activity\"])\n",
     "pd.read_csv(\"s1.csv\").fillna(\"\")"
    ],
    "metadata": {
@@ -188,9 +186,7 @@
     "import pandas as pd\n",
     "\n",
     "exp.scenarios[0].results_to_csv(\n",
-    "    \"s1.csv\", \n",
-    "    alternative_hierarchy=alt_hierarchy,\n",
-    "    level_names=[\"root\", \"activity\"]\n",
+    "    \"s1.csv\", alternative_hierarchy=alt_hierarchy, level_names=[\"root\", \"activity\"]\n",
     ")\n",
     "pd.read_csv(\"s1.csv\").fillna(\"\")"
    ],
