--- a/enbios/test/my_nonlinear_experiment.ipynb
+++ b/enbios/test/my_nonlinear_experiment.ipynb
@@ -96,35 +96,17 @@
    "outputs": [],
    "source": [
     "final_product = db.new_node(\n",
-    "    code='product',\n",
-    "    name='random production',\n",
-    "    location='ES',\n",
-    "    unit='unit'\n",
+    "    code=\"product\", name=\"random production\", location=\"ES\", unit=\"unit\"\n",
     ")\n",
     "final_product.save()\n",
     "\n",
-    "cf = db.new_node(\n",
-    "    code='cf',\n",
-    "    name='carbon fibre production',\n",
-    "    location='NO',\n",
-    "    unit='kg'\n",
-    ")\n",
+    "cf = db.new_node(code=\"cf\", name=\"carbon fibre production\", location=\"NO\", unit=\"kg\")\n",
     "cf.save()\n",
     "\n",
-    "ng = db.new_node(\n",
-    "    code='ng',\n",
-    "    name='natural gas production',\n",
-    "    location='NO',\n",
-    "    unit='MJ'\n",
-    ")\n",
+    "ng = db.new_node(code=\"ng\", name=\"natural gas production\", location=\"NO\", unit=\"MJ\")\n",
     "ng.save()\n",
     "\n",
-    "steel = db.new_node(\n",
-    "    code='steel',\n",
-    "    name='steel production',\n",
-    "    location='DE',\n",
-    "    unit='kg'\n",
-    ")\n",
+    "steel = db.new_node(code=\"steel\", name=\"steel production\", location=\"DE\", unit=\"kg\")\n",
     "steel.save()"
    ],
    "metadata": {
@@ -142,21 +124,13 @@
    "outputs": [],
    "source": [
     "co2 = db.new_node(\n",
-    "    code='co2',\n",
-    "    name=\"Carbon Dioxide\",\n",
-    "    categories=('air',),\n",
-    "    type='emission',\n",
-    "    unit='kg'\n",
+    "    code=\"co2\", name=\"Carbon Dioxide\", categories=(\"air\",), type=\"emission\", unit=\"kg\"\n",
     ")\n",
     "\n",
     "co2.save()\n",
     "\n",
     "bio_chem = db.new_node(\n",
-    "    code='bio_chem',\n",
-    "    name=\"Biochemicals\",\n",
-    "    categories=('air',),\n",
-    "    type='emission',\n",
-    "    unit='kg'\n",
+    "    code=\"bio_chem\", name=\"Biochemicals\", categories=(\"air\",), type=\"emission\", unit=\"kg\"\n",
     ")\n",
     "\n",
     "bio_chem.save()"
@@ -176,15 +150,11 @@
    "outputs": [],
    "source": [
     "def create_edge(act, input, amount, type):\n",
-    "    return act.new_edge(\n",
-    "        amount=amount,\n",
-    "        type=type,\n",
-    "        input=input\n",
-    "    ).save()\n",
+    "    return act.new_edge(amount=amount, type=type, input=input).save()\n",
     "\n",
     "\n",
-    "TECHNOSPHERE = 'technosphere'\n",
-    "BIOSPHERE = 'biosphere'\n",
+    "TECHNOSPHERE = \"technosphere\"\n",
+    "BIOSPHERE = \"biosphere\"\n",
     "\n",
     "create_edge(final_product, cf, 1, TECHNOSPHERE)\n",
     "create_edge(final_product, steel, 2, TECHNOSPHERE)\n",
@@ -210,11 +180,8 @@
    "execution_count": 111,
    "outputs": [],
    "source": [
-    "ipcc = bd.Method(('IPCC',))\n",
-    "ipcc.write([\n",
-    "    (co2.key, {'amount': 1}),\n",
-    "    (bio_chem.key, {'amount': 2})\n",
-    "])"
+    "ipcc = bd.Method((\"IPCC\",))\n",
+    "ipcc.write([(co2.key, {\"amount\": 1}), (bio_chem.key, {\"amount\": 2})])"
    ],
    "metadata": {
     "collapsed": false,
@@ -240,10 +207,11 @@
    ],
    "source": [
     "import bw2calc\n",
-    "lca = bw2calc.LCA(demand={final_product: 1}, method=('IPCC',))\n",
+    "\n",
+    "lca = bw2calc.LCA(demand={final_product: 1}, method=(\"IPCC\",))\n",
     "lca.lci()\n",
     "lca.lcia()\n",
-    "lca.score\n"
+    "lca.score"
    ],
    "metadata": {
     "collapsed": false,
@@ -455,10 +423,11 @@
    "source": [
     "# lets make a test of arbitrary functions, but use the linear values initially\n",
     "import numpy as np\n",
+    "\n",
     "cm = lca.characterization_matrix.sum(0)\n",
     "lin_values = np.squeeze(np.asarray(cm))\n",
     "# the characterisation array\n",
-    "lin_values "
+    "lin_values"
    ],
    "metadata": {
     "collapsed": false,
@@ -484,11 +453,11 @@
     }
    ],
    "source": [
-    "# this looks strange, but we need v=value, because of python closures \n",
+    "# this looks strange, but we need v=value, because of python closures\n",
     "funcs = []\n",
     "for value in lin_values:\n",
-    "  f = lambda x, v=value: x * v\n",
-    "  funcs.append(f)\n",
+    "    f = lambda x, v=value: x * v\n",
+    "    funcs.append(f)\n",
     "# what we get now is a list of functions, each of them is linear with the same coefficient as in the characterisation matrix\n",
     "print(funcs)\n",
     "print(funcs[0](1))\n",
@@ -523,7 +492,7 @@
     "for summed_row, function in zip(summed_inventory, funcs):\n",
     "    print(summed_row, function(summed_row))\n",
     "    result += function(summed_row)\n",
-    "print(result.sum()) # voilà"
+    "print(result.sum())  # voilà"
    ],
    "metadata": {
     "collapsed": false,
@@ -562,16 +531,13 @@
     "summed_inventory = lca.inventory.sum(1)\n",
     "\n",
     "# example: 2 arbitrary, independent functions:\n",
-    "funcs = [\n",
-    "    lambda x: x*x+2,\n",
-    "    lambda x: (x/3)-3\n",
-    "]\n",
+    "funcs = [lambda x: x * x + 2, lambda x: (x / 3) - 3]\n",
     "\n",
     "# result value for each biosphere activity\n",
     "result = np.array([])\n",
     "for summed_row, function in zip(summed_inventory, funcs):\n",
     "    result = np.append(result, function(summed_row))\n",
-    "    \n",
+    "\n",
     "# non-linear impact of each biosphere activity\n",
     "print(result)\n",
     "# result\n",
@@ -641,7 +607,7 @@
     "    # act = ActivityDataset.get_or_none(ActivityDataset.id == activity_id)\n",
     "    # print(act.code, act.name)\n",
     "    ids.append(activity_id)\n",
-    "    \n",
+    "\n",
     "activities = ActivityDataset.select().where(ActivityDataset.id.in_(ids))\n",
     "sorted_activities = sorted(activities, key=lambda activity: ids.index(activity.id))\n",
     "# sorted_activities\n",
