Add new check_bw_acts_normal file and update dependencies

--- a/enbios/demos/brightway_tools.ipynb
+++ b/enbios/demos/brightway_tools.ipynb
@@ -108,7 +108,7 @@
     "        databases=[\n",
     "            BWProjectDatabase(\n",
     "                name=\"ecoinvent_391_cutoff\",\n",
-    "                source=\"ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
+    "                source=\"/home/ra/projects/enbios/data/ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
     "                format=\"Ecospold2\",\n",
     "            )\n",
     "        ],\n",
@@ -138,7 +138,11 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from enbios.bw2.util import delete_all_projects\n",
+    "\n",
+    "delete_all_projects()"
+   ],
    "metadata": {
     "collapsed": false
    },
