Remove all files we dont need from the project also the whole bw, eiv indexing stuff...

--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROJECT_PATH /home/ra/projects/enbios/venv/lib/python3.10/site-packages\n",
+      "Creating logging config file at: /home/ra/projects/enbios/venv/lib/python3.10/site-packages/data/logging.json\n",
+      "Creating 'ecoinvent_pint_unit_match' file at: /home/ra/projects/enbios/venv/lib/python3.10/site-packages/data/ecoinvent_pint_unit_match.txt\n"
+     ]
+    }
+   ],
    "source": [
     "from copy import deepcopy\n",
     "from pathlib import Path\n",
@@ -16,7 +26,11 @@
     "from enbios.models.experiment_base_models import ExperimentData"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-12T11:32:45.819440792Z",
+     "start_time": "2024-01-12T11:32:43.885879575Z"
+    }
    }
   },
   {
@@ -34,9 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-12T11:41:45.184094883Z",
+     "start_time": "2024-01-12T11:41:45.148415365Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project: default\n",
+      "[]\n",
+      "Project: ecoinvent_391\n",
+      "['biosphere3', 'ecoinvent_391_cutoff']\n",
+      "Project: ei391\n",
+      "['biosphere3', 'ei391_cutoff_ecoSpold02']\n"
+     ]
+    }
+   ],
    "source": [
     "# get an overview of brightway projects and databases\n",
     "report()"
