--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
@@ -16,7 +16,11 @@
     "from enbios.models.experiment_base_models import ExperimentData"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-15T08:49:18.808229661Z",
+     "start_time": "2024-01-15T08:49:16.968917768Z"
+    }
    }
   },
   {
