--- a/enbios/demos/intro.ipynb
+++ b/enbios/demos/intro.ipynb
@@ -146,9 +146,7 @@
     }
    ],
    "source": [
-    "e = db.search(\n",
-    "    \"coal\", filter={\"location\": \"ES\"}\n",
-    ")[0]\n",
+    "e = db.search(\"coal\", filter={\"location\": \"ES\"})[0]\n",
     "e[\"name\"], e[\"database\"], e.key"
    ],
    "metadata": {
@@ -321,9 +319,11 @@
     "        \"ecotoxicity: freshwater\",\n",
     "        \"freshwater ecotoxicity potential (FETP)\",\n",
     "    ),\n",
-    "    \"HTPnc\": ('ReCiPe 2016 v1.03, midpoint (H)',\n",
-    "              'human toxicity: non-carcinogenic',\n",
-    "              'human toxicity potential (HTPnc)')\n",
+    "    \"HTPnc\": (\n",
+    "        \"ReCiPe 2016 v1.03, midpoint (H)\",\n",
+    "        \"human toxicity: non-carcinogenic\",\n",
+    "        \"human toxicity potential (HTPnc)\",\n",
+    "    ),\n",
     "}"
    ],
    "metadata": {
